namespace LabConsumableExpireTracker.Models.Enums;

public enum ExpiryCondition
{
    Valid = 1,
    ExpiringSoon = 2,
    Expired = 3
}
