namespace LabConsumableExpireTracker.Models.Enums;

public enum JobStatus
{
    Draft = 1,
    InProgress = 2,
    Completed = 3,
    Cancelled = 4
}
