namespace LabConsumableExpireTracker.Models.Enums;

public enum UnitOfMeasure
{
    Milliliter = 1,
    Gram = 2,
    Unit = 3,
    Vial = 4
}
